deps/v8/test/message/fail/strict-prior-octal-escape.out
# Copyright 2022 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

*%(basename)s:7: SyntaxError: Octal escape sequences are not allowed in strict mode.
    "\123";
      ^^
SyntaxError: Octal escape sequences are not allowed in strict mode.

